<resources>
        <!-- UI -->
    <string name="app_name">Pacman</string>
    <string name="points">Point:</string>
    <string name="action_settings">Indstillinger</string>
    <string name="pause">Pause</string>
    <string name="start">Fortsæt</string>
    <string name="next_level">Næste Niveau</string>
    <string name="timer_value">Tids-værdi: %1$d</string>
    <string name="timer">Tid</string>
    <string name="newgame">Nyt Spil</string>
        <!-- Controls -->
    <string name="move_left">Venstre</string>
    <string name="move_right">Højre</string>
    <string name="move_up">Op</string>
    <string name="move_down">Ned</string>
</resources>
